--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 Hello World
 ===========
-===========
 
 Author: Laszlo Szathmary (jabba.laci@gmail.com)
 Date:   2011-03-29 (yyyy-mm-dd)
 
-Test project for exploring git and github.
+Test project for exploring Git and GitHub.
